# turkey-audio-detection

./: .gitignore  LICENSE  README.md  constraints.txt  gobbler.yml  gobbler_env.yml  pyproject.toml  site_map.example.csv  turkey_gobble_audio_recognition.ipynb
docs/: autopilot_handoff.md  plan.md
src/turkey_audio_detection/: __init__.py  adjudication.py  app.py  app_infer.py  augment.py  cli.py  config.py  dataset.py  evaluation.py  hpo.py  ids.py  inference.py  layout.py  manifest.py  schemas.py  sed_augment.py  sed_data.py  sed_inference.py  sed_training.py  sites.py  spectrogram_render.py  stages.py  training.py  training_labels.py  unfreeze.py
src/turkey_audio_detection/components/: __init__.py
src/turkey_audio_detection/components/canvas/: index.html
src/turkey_audio_detection/models/: __init__.py  backbone.py  frame_sed.py  sed.py
supplemental/: turkey_gobble_audio_recognition.ipynb
tests/: test_adjudication.py  test_app_infer.py  test_augment.py  test_clip_stage.py  test_evaluation.py  test_frame_sed_model.py  test_hpo.py  test_ids.py  test_index_stage.py  test_inference_postprocess.py  test_layout.py  test_manifest.py  test_mask_construction.py  test_region_labels.py  test_resume.py  test_sed_augment.py  test_sed_data.py  test_sed_inference.py  test_sed_training.py  test_sites_split.py  test_spectrogram_render.py  test_training_labels.py
