[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turkey-audio-detection"
version = "0.1.0"
description = "Windows-first turkey audio detection and review pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "astral>=3.2",
  "birdnetlib>=0.18.0",
  "librosa>=0.10.2",
  "matplotlib>=3.8.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "pydantic>=2.9.0",
  "pyyaml>=6.0.2",
  "scikit-learn>=1.5.0",
  "soundfile>=0.12.1",
  "streamlit>=1.38.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[project.scripts]
turkey-pipeline = "turkey_audio_detection.cli:main"
turkey-review = "turkey_audio_detection.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
